# portfolio-aws-lib

./: README.md  pyproject.toml
src/portfolio_aws/: __init__.py  bedrock.py  config.py  secrets.py
