[project]
name = "portfolio-aws"
version = "0.1.0"
description = "Shared AWS helpers for portfolio demos (Secrets Manager + Bedrock)"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
